--- a/javascript-moderno/css/styles.css
+++ b/javascript-moderno/css/styles.css
@@ -4,3 +4,11 @@ body {
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
 }
+
+.ficha {
+  border: 2px solid black;
+  background: white;
+  margin: 15px auto;
+  padding: 15px;
+  width: 250px;
+}
